# mbv

./: .gitignore  .ignore  AGENTS.md  CHECKIN.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  PKGBUILD-git  README.md  RELEASE.md  build.rs  opencode.json
.claude/: settings.json
.claude/agents/: emby-research.md  explore.md  rust-helper.md
.githooks/: post-checkout  pre-commit  pre-merge-commit  pre-rebase
.github/workflows/: build.yml  ci.yml  quality.yml
.obsidian/: workspace.json
.out-of-scope/: local-daemon-bootstrap-fallback.md  mbvc-cli.md
.serena/: project.yml
.serena/memories/: api.md  app_module.md  conventions.md  core.md  feedback_remote_session_terminology.md  player.md  suggested_commands.md  task_completion.md  tech_stack.md
contrib/: mbv.service  mbvd.service
crates/mbv-core/: Cargo.toml
crates/mbv-core/src/: api.rs  bounded.rs  config.rs  ctrl.rs  daemon.rs  lib.rs  playback_queue.rs  player.rs  remote_player.rs  ws.rs
crates/mbvd/: Cargo.toml
crates/mbvd/src/: main.rs
docs/: CHECKIN.md  DEBUG.md  RELEASE.md  WORKTREES.md  divider-indicators.md  library-rendering.md  player-internals.md  rules
docs/.obsidian/: workspace.json
docs/adr/: 0001-core-playback-queue.md  0002-centralized-input-handling.md  0003-exclusive-ctrl-connection.md  0004-tray-observer-and-non-takeover-commands.md  0005-owned-pty-relay-for-stay-alive.md  0006-single-instance-flock-and-socket-detection.md  0007-daemon-control-authority.md  0008-audio-visualizer-captures-mbv-owned-audio.md  0009-v-key-controls-audio-visualizer.md  0010-lazy-daemon-route-connect-lifecycle.md  0011-library-scoped-daemon-routing.md  0012-sessions-panel-connection-ownership.md  0013-power-view-is-the-only-view.md
docs/agents/: debugging-regressions.md  domain.md  issue-tracker.md  repo.md  triage-labels.md  worktrees.md
docs/plans/: 2026-07-10-input-phase1-resolver-vocabulary.md  2026-07-10-input-phase2-keyboard-spine.md  2026-07-10-power-movie-banner-inline.md  2026-07-24-power-view-only.md
docs/superpowers/plans/: 2026-07-13-tui-status-bar.md  2026-07-16-compatible-ctrl-protocol-peers-todo.md  2026-07-16-compatible-ctrl-protocol-peers.md  2026-07-16-slow-exit-lock-held-todo.md  2026-07-16-slow-exit-lock-held.md  2026-07-17-daemon-connect-lifecycle.md  2026-07-17-library-scoped-daemon-routing.md  2026-07-17-remote-player-disconnect.md  2026-07-18-auto-reconnect-on-startup.md  2026-07-18-library-route-endpoint-cache.md  2026-07-18-library-routes-by-device-name.md  2026-07-18-route-session-seam.md  2026-07-19-compact-banner-image-placeholder.md  2026-07-19-compact-banner-image-prewarm.md  2026-07-19-fix-eager-prefetch-startup-regression.md  2026-07-19-music-library-group-pills-row.md  2026-07-19-remove-connect-daemon-flag.md  2026-07-19-route-diagnostics.md
docs/superpowers/specs/: 2026-07-10-movie-power-view-banner-design.md  2026-07-13-tui-status-bar-design.md  2026-07-16-compatible-ctrl-protocol-peers.md  2026-07-16-slow-exit-lock-held.md  2026-07-18-library-routes-by-device-name-design.md  2026-07-18-route-session-seam-design.md  2026-07-19-compact-banner-image-prewarm-design.md  2026-07-19-library-route-production-logging.md  2026-07-19-route-diagnostics-design.md
scripts/: branch-hygiene-hook.sh  install-branch-hygiene.sh  mbv.lua  mby.lua  release.sh  reset-root-checkout.sh
src/: api.rs  app.rs  applog.rs  config.rs  ctrl.rs  daemon.rs  login.rs  main.rs  mpris.rs  player.rs  relay.rs  remote_player.rs  single_instance.rs  terminal_client.rs  tray.rs  ws.rs
src/app/: action.rs  actions.rs  images.rs  input.rs  input_resolver.rs  layout.rs  library_route.rs  mod.rs  palette.rs  search.rs  settings.rs  stay_alive.rs  ui_util.rs
src/app/render/: album.rs  card.rs  detail.rs  home.rs  indicators.rs  library.rs  list.rs  log.rs  mod.rs  music.rs  overlays.rs  pills.rs  playlist.rs  power.rs  queue.rs
src/app/render/overlays/: context_menu.rs  help.rs  library_routes.rs  mod.rs  multiselect.rs  playlists.rs  sessions.rs  settings.rs
src/app/render/power/: album.rs  card.rs  detail.rs  episode.rs  home.rs  list.rs  mod.rs  music.rs  pills.rs  queue.rs
tasks/: 2026-07-16-power-view-scroll-spec.md  plan.md  todo.md
