[package]
name = "mby"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mby"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libmpv2 = "6"
libmpv2-sys = "4"
rand = "0.8"
textwrap = "0.16"
fuzzy-matcher = "0.3"
tungstenite = { version = "0.24", features = ["native-tls"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
ksni = { version = "0.3", features = ["blocking"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
