[workspace]
members = ["crates/mbv-core", "crates/mbvd"]
default-members = [".", "crates/mbv-core", "crates/mbvd"]

[workspace.package]
version = "0.12.2"
edition = "2021"

[workspace.dependencies]
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libmpv2 = "6"
libmpv2-sys = "4"
rand = "0.10"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tungstenite = { version = "0.30", features = ["native-tls"] }
log = "0.4"
libc = "0.2"
nix = { version = "0.31", features = ["fs", "process", "signal", "term", "socket"] }

[package]
name = "mbv"
version.workspace = true
edition.workspace = true
description = "Terminal UI client for Emby media servers."
default-run = "mbv"

[[bin]]
name = "mbv"
path = "src/main.rs"

[dependencies]
mbv-core = { path = "crates/mbv-core", features = ["test-support"] }
ratatui = "0.30"
crossterm = "0.29"
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
libmpv2.workspace = true
libmpv2-sys.workspace = true
rand.workspace = true
uuid.workspace = true
textwrap = "0.16"
fuzzy-matcher = "0.3"
tungstenite.workspace = true
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
ksni = { version = "0.3", features = ["blocking"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
unicode-width = "0.2.2"
log.workspace = true
libc.workspace = true
nix.workspace = true

[build-dependencies]
resvg = "0.47"

[package.metadata.deb]
maintainer = "slatkin <slatkin@gmail.com>"
copyright = "2024, slatkin"
license-file = ["LICENSE", "0"]
extended-description = "Terminal UI client for Emby media servers. Embeds mpv for playback, syncs position with Emby, and supports full remote control via Emby's websocket API."
depends = "libmpv2 | libmpv1, libc6, libssl3 | libssl1.1"
section = "video"
priority = "optional"
assets = [
    ["target/release/mbv", "usr/bin/mbv", "755"],
    ["scripts/mbv.lua", "usr/share/mbv/mbv.lua", "644"],
    ["fonts/Material-Design-Iconic-Font.ttf", "usr/share/mbv/Material-Design-Iconic-Font.ttf", "644"],
    ["dist/config.toml", "usr/share/mbv/config.toml", "644"],
]
