[package]
name = "mbv-core"
version.workspace = true
edition.workspace = true

[dependencies]
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libmpv2 = "6"
libmpv2-sys = "4"
rand = "0.10"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
log = "0.4"
libc = "0.2"
