[package]
name = "mbv-core"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dependencies]
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
libmpv2.workspace = true
libmpv2-sys.workspace = true
rand.workspace = true
uuid.workspace = true
tungstenite.workspace = true
log.workspace = true
libc.workspace = true
